--- a/app/styles/sass/media.scss
+++ b/app/styles/sass/media.scss
@@ -2092,3 +2092,185 @@ span.woocommerce-Price-amount.amount bdi, span.woocommerce-Price-amount.amount b
     max-width: initial;
   }
 }
+
+form.variations_form.cart p,
+form.variations_form.cart ul li{
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+.single-product tbody select {
+  display: none;
+}
+
+.woocommerce-variation-add-to-cart.variations_button {
+  padding-top: 140px;
+  margin-top: 0;
+}
+
+.Tea .sp_main--description__top {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: #FBB779;
+}
+
+.Tea .sp_main--description p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: #000000;
+}
+
+.Tea h1.sp_main--name{
+  border: none !important;
+  padding-bottom: 0;
+}
+
+table.variations {
+  padding-top: 30px;
+  display: inline-block;
+}
+
+.sp_main--size .sp_main--radio__wrap .check {
+  top: 4px;
+}
+
+.sp_main--size {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.sp_main--size .sp_main--radio__wrap input:checked~label {
+  color: #000;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+.sp_main--size .sp_main--radio__wrap label {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: #000;
+}
+.sp_main--description__top p {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+
+.sp_main--size .sp_main--radio__wrap input:checked~.check {
+  border: 0.58rem solid #fbb779;
+}
+.sp_main--size .sp_main--radio__wrap .check {
+  border: 0.13rem solid #fbb779;
+}
+.woocommerce-variation-add-to-cart.variations_button {
+  padding-top: 110px;
+  margin-top: 0;
+}
+table.variations tbody tr {
+  display: block;
+}
+
+h1.sp_main--name {
+  padding-bottom: 20px;
+  border-bottom: 0.06rem solid #fbb779;
+}
+
+table.variations tbody tr:nth-child(2) {
+  padding-top: 38px;
+}
+td.value {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 26px;
+}
+td.value > label {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 25px;
+  color: #FBB779;
+  border-bottom: 1px solid #FBB779;
+  display: flex;
+  height: 100%;
+}
+
+.single-product form.variations_form.cart ul {
+  margin-bottom: 0.88rem;
+  margin-top: 0.88rem;
+}
+
+.single-product form.variations_form.cart ul li {
+  margin-bottom: 0.25rem;
+  padding-left: 0.88rem;
+  position: relative;
+}
+
+.single-product form.variations_form.cart ul li:before {
+  background: #edc198;
+  border-radius: 50%;
+  content: "";
+  height: 0.38rem;
+  left: 0;
+  position: absolute;
+  top: 0.63rem;
+  width: 0.44rem;
+}
+.sp_main--description__top p {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: #FBB779;
+}
+.sp_main--description__top p {
+  font-weight: 600 !important;
+  font-size: 20px !important;
+  line-height: 25px !important;
+  letter-spacing: 1px !important;
+  color: #FBB779 !important;
+}
+@media screen and (max-width: 1040px){
+
+  .sp_main--size .sp_main--radio__wrap {
+    margin-right: 0.63rem;
+    width: 90%;
+  }
+
+  .variation-radios {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: calc(100vw - 15px);
+  }
+
+  td.value {
+    display: flex;
+    flex-direction: column;
+    max-width: 100vw;
+    flex-wrap: wrap;
+  }
+  .woocommerce-variation-add-to-cart.variations_button {
+    padding-top: 150px;
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 768px){
+  table.variations tbody tr:nth-child(2) {
+    padding-top: 18px;
+  }
+  table.variations{
+    padding-top: 0;
+  }
+  tbody {
+    margin-bottom: -4rem;
+    display: block;
+  }
+}
